--- a/mouse follower/index.css
+++ b/mouse follower/index.css
@@ -16,3 +16,12 @@ h1 {
 h3 {
   display: inline-block;
 }
+
+button {
+  padding: 20px 32px;
+  border: none;
+  background-color:  #f48fb1;
+  color: white;
+  font-weight: bold;
+  font-size: x-large;
+}
