--- a/mouse follower/index.css
+++ b/mouse follower/index.css
@@ -21,6 +21,10 @@ button {
   padding: 20px 32px;
   border: none;
   background-color:  #f48fb1;
+}
+
+a {
+  text-decoration: none;
   color: white;
   font-weight: bold;
   font-size: x-large;
