--- a/gradient animation/index.css
+++ b/gradient animation/index.css
@@ -3,7 +3,11 @@
 }
 
 .container {
-  position: relative;
+  z-index: -20;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
   top: 0;
   left: 0;
   height: 100vh;
@@ -13,15 +17,24 @@
 }
 
 .gradient1 {
-  filter: blur(80px);
+  filter: blur(60px);
+  z-index: -10;
   position: absolute;
   top: 0;
-  height: 110px;
-  width: 110px;
+  height: 100px;
+  width: 100px;
   background-color: white;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
+}
+
+.gradient2 {
+  filter: blur(200px);
+  height: 560px;
+  width: 560px;
+  background: white;
+  border-radius: 50%;
 }
 
 .circle {
