--- a/mf using gsap js/index.css
+++ b/mf using gsap js/index.css
@@ -1,12 +1,12 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  height: 100vh;
 }
 
 .container {
   width: 60%;
   margin: 0 auto;
+  height: 200vh;
 }
 
 button {
@@ -25,7 +25,7 @@ button {
   justify-content: center;
   align-items: center;
   box-shadow: 0px 0px 15px rgba(128, 128, 128, 0.456);
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 100;
   height: 80px;
@@ -37,7 +37,7 @@ button {
 }
 
 .txt {
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
